# console-py

./: .gitignore  .prospector.yaml  Earthfile  README.md  alembic.ini  flake.nix  pyproject.toml
.github/workflows/: main.yaml
alembic/: env.py
alembic/versions/: 20855e200c44_autogenerated_20220228t115940.py  b467bbaeecb2_initial_db_structure.py
console/: __main__.py  gql.py  main.py  settings.py
console/api/: __init__.py  deps.py  teams.py
console/api/v1/: __init__.py
console/api/v1/endpoints/: teams.py
console/core/: config.py
console/crud/: __init__.py  base.py
console/database/: __init__.py  models.py
console/web/: __init__.py  dependencies.py  schemas.py  teams.py
nais/: console.yaml
